# solarsim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  imgui.ini
shaders/: vertex.glsl
src/: body.cpp  body.hpp  globals.hpp  main.cpp  renderer.cpp  renderer.hpp  simulation.cpp  simulation.hpp
